--- a/index.css
+++ b/index.css
@@ -44,6 +44,7 @@
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  font-family:arimo
 }
 
 .dropdown-content a {
@@ -51,6 +52,7 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  
 }
 
 .dog {
