--- a/index.css
+++ b/index.css
@@ -26,7 +26,6 @@
   align-items: center;
   padding: 24px 80px;
 }
-
 .caixa1 {
   display: flex;
   align-items: center;
@@ -44,7 +43,6 @@
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  font-family:arimo
 }
 
 .dropdown-content a {
@@ -53,7 +51,14 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  
+}
+.botao a{
+  color:black;
+  text-decoration: none;
+}
+.botao3 a{
+  color:black;
+  text-decoration: none;
 }
 
 .dog {
@@ -84,7 +89,7 @@
   justify-content: center;
   flex-wrap: wrap;
 }
-.botao3{
+.botao3 {
   gap: 50px;
   display: flex;
   width: 100%;
@@ -160,11 +165,11 @@
   padding: 30px;
   border-radius: 10px;
 }
-.botao2{
+.botao2 {
   margin-top: 50px;
   background-color: #ffe600;
   padding: 10px;
- 
+
   border-radius: 20px;
   align-items: center;
   border-style: none;
